<?xml version="1.0"?>
<package format="2">
  <name>relocalization_toolbox</name>
  <version>1.0.0</version>
  <description>relocalization_toolbox</description>

  <maintainer email="muhua.zhang@my.swjtu.edu.cn">ZHANG Muhua</maintainer>
  <license>GPL-3.0 License</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>relocalization_toolbox_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
