<?xml version="1.0"?>
<package format="2">
  <name>relocalization_toolbox_msgs</name>
  <version>1.0.0</version>
  <description>relocalization_toolbox_msgs</description>

  <maintainer email="muhua.zhang@my.swjtu.edu.cn">ZHANG Muhua</maintainer>
  <license>GPL-3.0 License</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>actionlib_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
